--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,50 @@ button {
   margin: 0 1px;
   background-color: var(--secondary);
 }
+
+button:hover {
+    opacity: 0.8;
+  }
+  
+  button[disabled] {
+    cursor: default;
+    opacity: 0.8;
+  }
+  
+  img {
+    max-width: 100%;
+  }
+  
+  span[role='img'] {
+    cursor: default;
+  }
+  
+  form {
+    width: 40%;
+  }
+  
+  input {
+    font-size: 1rem;
+    padding: 0.25rem;
+    border: 1px solid var(--dark);
+    outline: none;
+    border-radius: 3px;
+    transition: box-shadow 0.2s;
+  }
+  
+  input:focus {
+    border: 1px solid var(--secondary);
+    box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
+  }
+  
+  li {
+    list-style: none;
+  }
+  
+  nav a:hover {
+    text-decoration: none;
+  }
+  
+  nav li {
+    cursor: pointer;
+  }
